<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="MCP_IO" Id="{2eccccd0-d6b2-453f-b49b-33f7d0364904}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	MasterStopPB_Pressed		: BOOL;
	CageEstopCircuitOK			: BOOL;
	AutoModeSelected			: BOOL;
	PSU1_DCOK					: BOOL;
	MachineGNDrlyOpen			: BOOL;
	CloseAllChargeRlyCommand	: BOOL;
	OpenAllDumpRelayCommand		: BOOL;
	Charger 					: ARRAY [1..8] OF ST_Charger_Base;
	GLS1_hvON					: BOOL;
	GLS2_hvON					: BOOL;
	GLS3_hvON					: BOOL;
	LiftMachineGND				: BOOL;
	AllChargeRelaysClose		: BOOL;
	AllDumpRelaysOpen			: BOOL;
	GLS1_voltageSP				: INT;
	GLS2_voltageSP				: INT;
	GLS3_voltageSP				: INT;
	
	AllChargerInhibited			: BOOL;
	AllChargerHVisON			: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>