<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Permissives_DB" Id="{c05a4b99-99cd-4605-96e2-a97127a00965}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AllShortContactEngaged	: BOOL;
	AllDumpRelaysOpen		: BOOL;
	AllChargeRelaysClosed	: BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>